<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_servicios"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/title_servicios" />

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_mapa" />

    <item
        android:id="@+id/navigation_galeria"
        android:icon="@drawable/baseline_image_24"
        android:title="@string/title_galeria" />
    <item
        android:id="@+id/navigation_historia"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/title_historia" />
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/title_login" />

</menu>