<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_servicios">

    <fragment
        android:id="@+id/navigation_servicios"
        android:name="com.dam2.appretoandroid.ui.servicios.ServiciosFragment"
        android:label="@string/title_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.dam2.appretoandroid.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/navigation_galeria"
        android:name="com.dam2.appretoandroid.ui.galeria.GaleriaFragment"
        android:label="@string/title_galeria"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/navigation_historia"
        android:name="com.dam2.appretoandroid.ui.historia.HistoriaFragment"
        android:label="@string/title_historia"
        tools:layout="@layout/fragment_historia" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.dam2.appretoandroid.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
</navigation>